# cds95-mod

./: .gitignore  0.ReadMe.md  1.HotelUtil.md  2.CollectionUtil.md  4.SaveUtil.md  5.PatchUtil.md  CDROMUtil.md  DDrawWrapper.md  MouseUtil.md  README.md  build.ps1  cds-api.ps1  cds-ship-atlas.ps1
.github/workflows/: release.yml
CDS95Util/: AudioFixKR.plugin  CDROMUtil.plugin  CPUPatch.plugin  CharacterUtilKR.plugin  CollectionUtil.plugin  DDrawWrapper.plugin  GameApiKR.plugin  HotelUtil.plugin  HotelUtilKR.plugin  MemoryFix.plugin  PatchUtil.plugin  SaveUtil.plugin  ScreenUtilKR.plugin  ShipSkinKR.plugin  TradeUtil.ini  TradeUtil.plugin  TradeUtilKR.plugin
documents/: 0.History.md  3.TradeUtil.md  CPUPatch.md  MemoryFix.md
note/: HotelUtil 숙박일수 한국어판 이식.md  TradeSaleListBuilder-0x480CC0.md
plugins-src/: CMakeLists.txt  DebugView.md  README.md  existing-plugin-addresses.md
plugins-src/AudioFixKR/: CMakeLists.txt
plugins-src/AudioFixKR/src/: dllmain.c
plugins-src/CharacterUtilKR/: CMakeLists.txt
plugins-src/CharacterUtilKR/src/: char_info.h  char_names.h  character.c  character.h  dllmain.c  face_palette.h  ls12.c  ls12.h
plugins-src/CollectionUtilKR/: CMakeLists.txt
plugins-src/CollectionUtilKR/src/: dllmain.c  hooks.c  hooks.h  version.h
plugins-src/GameApiKR/: CMakeLists.txt
plugins-src/GameApiKR/src/: api.c  dllmain.c
plugins-src/HotelUtilKR/: CMakeLists.txt
plugins-src/HotelUtilKR/src/: dialog.c  dialog.h  dllmain.c  hooks.c  hooks.h  version.c  version.h
plugins-src/ScreenUtilKR/: CMakeLists.txt
plugins-src/ScreenUtilKR/src/: dllmain.c  screen.c
plugins-src/ShipSkinKR/: CMakeLists.txt
plugins-src/ShipSkinKR/src/: dllmain.c  hook.c  menu.c  ship_palette.h  ship_window.c
plugins-src/TradeUtilKR/: CMakeLists.txt
plugins-src/TradeUtilKR/src/: cities_data.h  dllmain.c  goods_names.h  item_names.h  trade.c  trade.h  warp_data.h
plugins-src/tools/: cds-api.ps1  cds-disasm.lua  cds-trace.lua  ce-trace.ps1  find-array-cluster.ps1  find-date-by-diff.ps1  find-flag-offset.ps1  find-stay-routine.py  find-what-accesses.py  find-what-writes.py  scan-code-xrefs.ps1  scan-hardcoded-addresses.ps1  snapshot-diff.ps1  verify-date-addresses.ps1
